# Customer-Intelligence-Platform

./: .gitignore  demo.py  docker-compose.yml  kn_base.md  main.py  pyproject.toml  setup_project.sh  test_db_agent.py
app/agents/: __init__.py  agent.py  agent_class.py  answer_agent.py  classification_agent.py  customer_service_agent.py  escalation_agent.py  retrieval_agent.py  router_agent.py  sql_agent.py
app/api/: app.py  routes_admin.py  routes_auth.py  routes_chat.py  routes_feedback.py  schemas.py
app/authentication/: __init__.py  auth.py
app/database/: __init__.py  init_db.py  init_vs.py  models.py  pgvector_client.py  session.py
app/nlp/: __init__.py  embeddings.py
app/nodes/: node_router_agent.py
app/rag/: __init__.py  ingestion.py  knowledge_base.py  retriever.py
app/schemas/: __init__.py  agent_state.py
app/tools/: __init__.py  retriever_as_tool.py  sql_agent_as_tool.py
app/utils/: __init__.py  config.py  logger.py
app/workflows/: workflow.py
configs/: config.yaml
configs/authentication/: auth.yaml
configs/db/: postgres.yaml
configs/embeddings/: mistral.yaml  sentence_transformers.yaml
configs/logging/: app.yaml
configs/models/: model.yaml
notebook/: PGVectorStore_integration.ipynb  lr01.ipynb  sql_agent.ipynb
scripts/: __init__.py  constants.py  ingest_documents.py  initialize_db.py
