[project]
name = "customer-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-huggingface>=1.2.1",
    "langchain-mistralai>=1.1.2",
    "langchain-postgres>=0.0.17",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.41.0",
]

